# Avalon-miner

./: .gitignore  CMakeLists.txt  LICENSE  README.md
_codeql_build_dir/: CTestTestfile.cmake
_codeql_build_dir/tests/: CTestTestfile.cmake  quaxis_tests[1]_include.cmake
bitcoin-core-patches/: 0001-quaxis-shm-bridge.patch  0002-spy-mining-callback.patch  0003-block-priority.patch  README.md  apply-patches.sh
config/: bitcoin.conf.optimized  quaxis.toml.example
docs/: ADDING_NEW_CHAIN.md  ARCHITECTURE.md  BUILDING.md  CONFIGURATION.md  FIBRE_INTEGRATION.md  MERGED_MINING.md  MONITORING.md  OPERATIONS.md  OPTIMIZATIONS.md  OPTIMIZATIONS_ADVANCED.md  PROTOCOL.md  UNIVERSAL_CORE.md
firmware/: Makefile  README.md  linker.ld
firmware/include/: a1126_driver.h  config.h  health_reporter.h  network.h  nonce_range.h  protocol.h  sha256.h  spi.h  version_rolling.h
firmware/src/: a1126_driver.c  health_reporter.c  main.c  network.c  nonce_range.c  sha256.c  spi.c  utils.c  version_rolling.c
issues/5/: comment.md
monitoring/: grafana-dashboard.json  prometheus-alerts.yml
scripts/: build.sh  install-dependencies.sh  quaxis-miner.service  run-server.sh  setup-bitcoin-core.sh
scripts/stress/: fake_asic_simulator.cpp
src/: CMakeLists.txt  main.cpp
src/bitcoin/: CMakeLists.txt  address.cpp  address.hpp  block.cpp  block.hpp  coinbase.cpp  coinbase.hpp  rpc_client.cpp  rpc_client.hpp  shm_subscriber.cpp  shm_subscriber.hpp  target.cpp  target.hpp
src/bridge/: CMakeLists.txt  bitcoin_bridge.cpp  bitcoin_bridge.hpp
src/core/: CMakeLists.txt  byte_order.cpp  byte_order.hpp  config.cpp  config.hpp  constants.hpp  mtp_calculator.cpp  mtp_calculator.hpp  template_generator.cpp  template_generator.hpp  types.hpp
src/core/chain/: chain_params.hpp  chain_registry.cpp  chain_registry.hpp  consensus_type.hpp
src/core/primitives/: CMakeLists.txt  auxpow.cpp  auxpow.hpp  block_header.cpp  block_header.hpp  merkle.cpp  merkle.hpp  uint256.cpp  uint256.hpp
src/core/serialization/: stream.cpp  stream.hpp
src/core/sync/: CMakeLists.txt  headers_store.cpp  headers_store.hpp  headers_sync.cpp  headers_sync.hpp
src/core/validation/: CMakeLists.txt  auxpow_validator.cpp  auxpow_validator.hpp  pow_validator.cpp  pow_validator.hpp
src/crypto/: CMakeLists.txt  sha256.cpp  sha256.hpp  sha256_generic.cpp  sha256_shani.cpp
src/fallback/: CMakeLists.txt  fallback_manager.cpp  fallback_manager.hpp  pool_config.cpp  pool_config.hpp  stratum_client.cpp  stratum_client.hpp
src/http/: CMakeLists.txt  health_handler.hpp  http_server.cpp  http_server.hpp  metrics_handler.hpp
src/log/: CMakeLists.txt  status_reporter.cpp  status_reporter.hpp
src/merged/: CMakeLists.txt  auxpow.cpp  auxpow.hpp  chain_interface.hpp  chain_manager.cpp  chain_manager.hpp  merged_job_creator.cpp  merged_job_creator.hpp  reward_dispatcher.cpp  reward_dispatcher.hpp
src/merged/chains/: base_chain.cpp  base_chain.hpp  elastos_chain.cpp  elastos_chain.hpp  emercoin_chain.cpp  emercoin_chain.hpp  fractal_chain.cpp  fractal_chain.hpp  hathor_chain.cpp  hathor_chain.hpp  huntercoin_chain.cpp  huntercoin_chain.hpp  myriad_chain.cpp  myriad_chain.hpp  namecoin_chain.cpp  namecoin_chain.hpp  rsk_chain.cpp  rsk_chain.hpp  stacks_chain.cpp  stacks_chain.hpp  syscoin_chain.cpp  syscoin_chain.hpp  terracoin_chain.cpp  terracoin_chain.hpp  unobtanium_chain.cpp  unobtanium_chain.hpp  vcash_chain.cpp  vcash_chain.hpp
src/merged/rpc/: aux_rpc_client.cpp  aux_rpc_client.hpp
src/mining/: CMakeLists.txt  extranonce_manager.cpp  extranonce_manager.hpp  job.hpp  job_manager.cpp  job_manager.hpp  nonce_distributor.cpp  nonce_distributor.hpp  share_validator.cpp  share_validator.hpp  template_cache.cpp  template_cache.hpp  version_rolling.cpp  version_rolling.hpp
src/monitoring/: CMakeLists.txt  alert_manager.cpp  alert_manager.hpp  alerter.cpp  alerter.hpp  health_monitor.cpp  health_monitor.hpp  metrics.cpp  metrics.hpp  stats.cpp  stats.hpp
src/network/: CMakeLists.txt  asic_connection.cpp  asic_connection.hpp  protocol.cpp  protocol.hpp  server.cpp  server.hpp
src/relay/: CMakeLists.txt  block_reconstructor.cpp  block_reconstructor.hpp  fec_decoder.cpp  fec_decoder.hpp  fibre_protocol.cpp  fibre_protocol.hpp  relay_manager.cpp  relay_manager.hpp  relay_peer.cpp  relay_peer.hpp  udp_socket.cpp  udp_socket.hpp
src/shm/: CMakeLists.txt  adaptive_spin.cpp  adaptive_spin.hpp
tests/: CMakeLists.txt  benchmark_shm_vs_zmq.cpp  test_adaptive_spin.cpp  test_additional_chains.cpp  test_auxpow.cpp  test_block.cpp  test_chain_manager.cpp  test_coinbase.cpp  test_extranonce_manager.cpp  test_fallback_manager.cpp  test_health_endpoint.cpp  test_health_monitor.cpp  test_merged_integration.cpp  test_metrics.cpp  test_nonce_distributor.cpp  test_protocol.cpp  test_relay.cpp  test_sha256.cpp  test_status_reporter.cpp  test_target.cpp  test_version_rolling.cpp
tests/core/: test_auxpow_validator.cpp  test_chain_params.cpp  test_headers_sync.cpp
